# boi-crafting-calc

./: .eslintrc.json  .gitignore  .prettierrc.json  Cargo.toml  build.sh  package.json  tailwind.config.js  test.sh  tsconfig.json  webpack.config.js
src/: itempools.xml.zz  items_metadata.xml.zz  lib.rs
web/: api.ts  available_cache.ts  available_crafter.ts  image_utils.ts  index.html  index.tsx  main.ts  store.ts  styles.css  worker.ts  worker_api.ts
web/components/: app.tsx  items.tsx  pickup.tsx  pickups.tsx  recipe.tsx  recipes.tsx
web/components/item/: index.tsx
web/components/pickup/: index.tsx  pickup_image.tsx
web/reducers/: crafter_slice.ts
web/slices/: crafter_slice.ts
web/util/: defaults.ts
