[package]
name = "boi-crafting-calc"
version = "0.1.0"
authors = ["Andrew Houts <ahouts4@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true

[profile.dev]
opt-level = "z"

[dependencies]
serde-xml-rs = "0.4"
strum = "0.20"
strum_macros = "0.20"
wasm-bindgen = "0.2"
wee_alloc = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.smartstring]
version = "0.2"
features = ["serde"]

[dev-dependencies]
once_cell = "1.7"
itertools = "0.10"
